--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.9",
+    "@expo-google-fonts/roboto": "^0.2.2",
+    "expo": "^47.0.9",
+    "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-svg": "13.4.0",
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.7",
+    "@types/react": "~18.0.26",
+    "@types/react-native": "~0.70.8",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "typescript": "^4.9.4"
+  },
+  "overrides": {
+    "react": "18.1.0"
   },
   "private": true
 }
