--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ignitegym",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -17,14 +17,25 @@
     "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-svg": "13.4.0",
-    "react-native-safe-area-context": "4.4.1"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.0.26",
     "@types/react-native": "~0.70.8",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.31.0",
+    "eslint-config-standard-with-typescript": "^26.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
+    "prettier": "^2.8.1",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
   },
   "overrides": {
