--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.1",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
